ProgLang/Project0/originals/parser.output
Terminals unused in grammar

    TOKEN_ID
    TOKEN_INTEGER


Grammar

    0 $accept: program $end

    1 program: expr TOKEN_SEMI

    2 expr: expr TOKEN_PLUS term
    3     | expr TOKEN_MINUS term
    4     | term

    5 term: term TOKEN_MUL factor
    6     | term TOKEN_DIV factor
    7     | factor

    8 factor: TOKEN_LPAREN expr TOKEN_RPAREN
    9       | TOKEN_MINUS factor
   10       | TOKEN_SIN TOKEN_LPAREN expr TOKEN_RPAREN
   11       | TOKEN_COS TOKEN_LPAREN expr TOKEN_RPAREN
   12       | TOKEN_INT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_ID (258)
    TOKEN_INTEGER (259)
    TOKEN_INT (260) 12
    TOKEN_SEMI (261) 1
    TOKEN_PLUS (262) 2
    TOKEN_MINUS (263) 3 9
    TOKEN_MUL (264) 5
    TOKEN_DIV (265) 6
    TOKEN_LPAREN (266) 8 10 11
    TOKEN_RPAREN (267) 8 10 11
    TOKEN_SIN (268) 10
    TOKEN_COS (269) 11


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    program (16)
        on left: 1
        on right: 0
    expr (17)
        on left: 2 3 4
        on right: 1 2 3 8 10 11
    term (18)
        on left: 5 6 7
        on right: 2 3 4 5 6
    factor (19)
        on left: 8 9 10 11 12
        on right: 5 6 7 9


State 0

    0 $accept: • program $end

    TOKEN_INT     shift, and go to state 1
    TOKEN_MINUS   shift, and go to state 2
    TOKEN_LPAREN  shift, and go to state 3
    TOKEN_SIN     shift, and go to state 4
    TOKEN_COS     shift, and go to state 5

    program  go to state 6
    expr     go to state 7
    term     go to state 8
    factor   go to state 9


State 1

   12 factor: TOKEN_INT •

    $default  reduce using rule 12 (factor)


State 2

    9 factor: TOKEN_MINUS • factor

    TOKEN_INT     shift, and go to state 1
    TOKEN_MINUS   shift, and go to state 2
    TOKEN_LPAREN  shift, and go to state 3
    TOKEN_SIN     shift, and go to state 4
    TOKEN_COS     shift, and go to state 5

    factor  go to state 10


State 3

    8 factor: TOKEN_LPAREN • expr TOKEN_RPAREN

    TOKEN_INT     shift, and go to state 1
    TOKEN_MINUS   shift, and go to state 2
    TOKEN_LPAREN  shift, and go to state 3
    TOKEN_SIN     shift, and go to state 4
    TOKEN_COS     shift, and go to state 5

    expr    go to state 11
    term    go to state 8
    factor  go to state 9


State 4

   10 factor: TOKEN_SIN • TOKEN_LPAREN expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 12


State 5

   11 factor: TOKEN_COS • TOKEN_LPAREN expr TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 13


State 6

    0 $accept: program • $end

    $end  shift, and go to state 14


State 7

    1 program: expr • TOKEN_SEMI
    2 expr: expr • TOKEN_PLUS term
    3     | expr • TOKEN_MINUS term

    TOKEN_SEMI   shift, and go to state 15
    TOKEN_PLUS   shift, and go to state 16
    TOKEN_MINUS  shift, and go to state 17


State 8

    4 expr: term •
    5 term: term • TOKEN_MUL factor
    6     | term • TOKEN_DIV factor

    TOKEN_MUL  shift, and go to state 18
    TOKEN_DIV  shift, and go to state 19

    $default  reduce using rule 4 (expr)


State 9

    7 term: factor •

    $default  reduce using rule 7 (term)


State 10

    9 factor: TOKEN_MINUS factor •

    $default  reduce using rule 9 (factor)


State 11

    2 expr: expr • TOKEN_PLUS term
    3     | expr • TOKEN_MINUS term
    8 factor: TOKEN_LPAREN expr • TOKEN_RPAREN

    TOKEN_PLUS    shift, and go to state 16
    TOKEN_MINUS   shift, and go to state 17
    TOKEN_RPAREN  shift, and go to state 20


State 12

   10 factor: TOKEN_SIN TOKEN_LPAREN • expr TOKEN_RPAREN

    TOKEN_INT     shift, and go to state 1
    TOKEN_MINUS   shift, and go to state 2
    TOKEN_LPAREN  shift, and go to state 3
    TOKEN_SIN     shift, and go to state 4
    TOKEN_COS     shift, and go to state 5

    expr    go to state 21
    term    go to state 8
    factor  go to state 9


State 13

   11 factor: TOKEN_COS TOKEN_LPAREN • expr TOKEN_RPAREN

    TOKEN_INT     shift, and go to state 1
    TOKEN_MINUS   shift, and go to state 2
    TOKEN_LPAREN  shift, and go to state 3
    TOKEN_SIN     shift, and go to state 4
    TOKEN_COS     shift, and go to state 5

    expr    go to state 22
    term    go to state 8
    factor  go to state 9


State 14

    0 $accept: program $end •

    $default  accept


State 15

    1 program: expr TOKEN_SEMI •

    $default  reduce using rule 1 (program)


State 16

    2 expr: expr TOKEN_PLUS • term

    TOKEN_INT     shift, and go to state 1
    TOKEN_MINUS   shift, and go to state 2
    TOKEN_LPAREN  shift, and go to state 3
    TOKEN_SIN     shift, and go to state 4
    TOKEN_COS     shift, and go to state 5

    term    go to state 23
    factor  go to state 9


State 17

    3 expr: expr TOKEN_MINUS • term

    TOKEN_INT     shift, and go to state 1
    TOKEN_MINUS   shift, and go to state 2
    TOKEN_LPAREN  shift, and go to state 3
    TOKEN_SIN     shift, and go to state 4
    TOKEN_COS     shift, and go to state 5

    term    go to state 24
    factor  go to state 9


State 18

    5 term: term TOKEN_MUL • factor

    TOKEN_INT     shift, and go to state 1
    TOKEN_MINUS   shift, and go to state 2
    TOKEN_LPAREN  shift, and go to state 3
    TOKEN_SIN     shift, and go to state 4
    TOKEN_COS     shift, and go to state 5

    factor  go to state 25


State 19

    6 term: term TOKEN_DIV • factor

    TOKEN_INT     shift, and go to state 1
    TOKEN_MINUS   shift, and go to state 2
    TOKEN_LPAREN  shift, and go to state 3
    TOKEN_SIN     shift, and go to state 4
    TOKEN_COS     shift, and go to state 5

    factor  go to state 26


State 20

    8 factor: TOKEN_LPAREN expr TOKEN_RPAREN •

    $default  reduce using rule 8 (factor)


State 21

    2 expr: expr • TOKEN_PLUS term
    3     | expr • TOKEN_MINUS term
   10 factor: TOKEN_SIN TOKEN_LPAREN expr • TOKEN_RPAREN

    TOKEN_PLUS    shift, and go to state 16
    TOKEN_MINUS   shift, and go to state 17
    TOKEN_RPAREN  shift, and go to state 27


State 22

    2 expr: expr • TOKEN_PLUS term
    3     | expr • TOKEN_MINUS term
   11 factor: TOKEN_COS TOKEN_LPAREN expr • TOKEN_RPAREN

    TOKEN_PLUS    shift, and go to state 16
    TOKEN_MINUS   shift, and go to state 17
    TOKEN_RPAREN  shift, and go to state 28


State 23

    2 expr: expr TOKEN_PLUS term •
    5 term: term • TOKEN_MUL factor
    6     | term • TOKEN_DIV factor

    TOKEN_MUL  shift, and go to state 18
    TOKEN_DIV  shift, and go to state 19

    $default  reduce using rule 2 (expr)


State 24

    3 expr: expr TOKEN_MINUS term •
    5 term: term • TOKEN_MUL factor
    6     | term • TOKEN_DIV factor

    TOKEN_MUL  shift, and go to state 18
    TOKEN_DIV  shift, and go to state 19

    $default  reduce using rule 3 (expr)


State 25

    5 term: term TOKEN_MUL factor •

    $default  reduce using rule 5 (term)


State 26

    6 term: term TOKEN_DIV factor •

    $default  reduce using rule 6 (term)


State 27

   10 factor: TOKEN_SIN TOKEN_LPAREN expr TOKEN_RPAREN •

    $default  reduce using rule 10 (factor)


State 28

   11 factor: TOKEN_COS TOKEN_LPAREN expr TOKEN_RPAREN •

    $default  reduce using rule 11 (factor)
